aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <ingress-name>
  namespace: <app-namespace>
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: route53-issuer # clusterissuer
spec:
  ingressClassName: nginx
  rules:
    - host: <domain>
      http:
        paths:
          - path: /
            pathType: Prefix # Prefix: /foo matches /foo/bar | Exact: /foo only | ImplementationSpecific: ingress controller decides
            backend:
              service:
                name: <app-servicename>
                port:
                  name: https # Change to match your service port name, or use "number: 443" for numeric ports
  tls:
    - hosts:
        - <domain>
      secretName: <app-name>-tls
